packages/build/tests/error/fixtures/function/plugin.js
export default function testPlugin() {
  throw new Error('test')
}
